--- a/src/views/client.view.ejs
+++ b/src/views/client.view.ejs
@@ -15,11 +15,11 @@
       <% for (let i = 0; i < clients.length; i++) { %>
         <li class="list-group-item client__clients-item">
           <div class="row">
-            <div class="col-sm-2"><%= clients[i].id %></div>
-            <div class="col-sm-1"><%= clients[i].secret %></div>
-            <div class="col-sm-1"><%= clients[i].scope %></div>
-            <div class="col-sm-1"><%= clients[i].createdAt %></div>
-            <div class="col-sm-1"><%= clients[i].updatedAt %></div>
+            <div class="col-xs-12"><%= clients[i].id %></div>
+            <div class="col-xs-12"><%= clients[i].secret %></div>
+            <div class="col-xs-12"><%= clients[i].scope %></div>
+            <div class="col-xs-12"><%= clients[i].createdAt %></div>
+            <div class="col-xs-12"><%= clients[i].updatedAt %></div>
           </div>
         </li>
       <% } %>
