--- a/src/views/index.view.ejs
+++ b/src/views/index.view.ejs
@@ -12,19 +12,20 @@
   <div class="index">
     <h1>Stuff</h1>
     <div class="row">
-      <div class="col-md-1 col-xs-12">
+      <div class="col-xs-12">
         <a href="/login">Login</a>
       </div>
-      <div class="col-md-1 col-xs-12">
+      <div class="col-xs-12">
         <a href="/users">Users</a>
       </div>
-      <div class="col-md-1 col-xs-12">
+      <div class="col-xs-12">
         <a href="/clients">Clients</a>
       </div>
-      <div class="col-md-1 col-xs-12">
+      <div class="col-xs-12">
         <a href="/sessions">Sessions</a>
       </div>
     </div>
   </div>
+  <script src="/app.js"></script>
 </body>
 </html>
