--- a/src/views/session.view.ejs
+++ b/src/views/session.view.ejs
@@ -15,8 +15,8 @@
       <% for (let i = 0; i < sessions.length; i++) { %>
         <li class="list-group-item session__sessions-item">
           <div class="row">
-            <div class="col-sm-2"><%= sessions[i].expires %></div>
-            <div class="col-sm-2"><%= sessions[i].session %></div>
+            <div class="col-xs-12"><%= sessions[i].expires %></div>
+            <div class="col-xs-12"><%= sessions[i].session %></div>
           </div>
         </li>
       <% } %>
